- fixed bug with tag-list items that would prevent them to show properly on mobile sceens - fixed bug where people's advanced search main search input height will be higher than the rest of the search elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -1133,7 +1133,6 @@ section {
 }
 @media screen and (max-width: 400px) {
   .tag-list li  {
-    max-width: 40px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
